--- a/NubeBooks/Views/Admin/Usuario.cshtml
+++ b/NubeBooks/Views/Admin/Usuario.cshtml
@@ -80,48 +80,54 @@ else { cadena = "Actualizar"; }
                                     }
                                 </select>
                                 @Html.ValidationMessageFor(u => u.IdRol)
-                                        }
-                                        else
-                                        {
-                                            <label>Rol</label><br />
-                                            @Html.Label(@Model.NombreRol, new { @class = "form-control", @type = "text" })
-                                            @Html.TextBoxFor(u => u.IdRol, new { @value = Model != null ? Model.IdRol.ToString() : "", @type = "hidden" })
-                                            @Html.TextBoxFor(u => u.NombreRol, new { @value = Model != null ? Model.NombreRol : "", @type = "hidden" })
-                                        }
+                            }
+                            else
+                            {
+                                <label>Rol</label><br />
+                                @Html.Label(@Model.NombreRol, new { @class = "form-control", @type = "text" })
+                                @Html.TextBoxFor(u => u.IdRol, new { @value = Model != null ? Model.IdRol.ToString() : "", @type = "hidden" })
+                                @Html.TextBoxFor(u => u.NombreRol, new { @value = Model != null ? Model.NombreRol : "", @type = "hidden" })
+                            }
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-3">
                             <label>Cuenta</label>
                             @Html.TextBoxFor(u => u.Cuenta, new { @class = "form-control", @placeholder = "Ingrese el nombre de la cuenta", @type = "text" })
                             @Html.ValidationMessageFor(u => u.Cuenta)
                         </div>
-                        <div class="col-md-6">
-                            <label>Password</label><br>
-                            @if (Model != null && Model.IdUsuario > 0)
+                        @if (Model != null && Model.IdUsuario > 0)
+                        {
+                            var user = (NubeBooks.Core.DTO.UsuarioDTO)HttpContext.Current.Session["User"];
+                            if (ViewBag.EsAdmin || Model.IdUsuario == user.IdUsuario)
                             {
-                                var user = (NubeBooks.Core.DTO.UsuarioDTO)HttpContext.Current.Session["User"];
-                                if (ViewBag.EsAdmin || Model.IdUsuario == user.IdUsuario)
-                                {
+                                <div class="col-md-3">
+                                    <label>Password</label><br />
                                     <button type="button" class="btn btn-sm btn-info" id="btnChangePassword">Cambiar contraseña</button><br /><br />
-                                    <input type="password" class="form-control hide" name="passUser" id="passUser" placeholder="Contraseña actual" /><br />
-                                    <input type="password" class="form-control hide" name="passChange" id="passChange" placeholder="Nueva contraseña" />
+                                </div>
+                                <div class="col-md-3">
+                                    <br /><input type="password" class="form-control hide" name="passUser" id="passUser" placeholder="Contraseña actual" /><br />
+                                </div>
+                                <div class="col-md-3">
+                                    <br /><input type="password" class="form-control hide" name="passChange" id="passChange" placeholder="Nueva contraseña" />
                                     @Html.TextBoxFor(u => u.Pass, new { @class = "form-control", @placeholder = "Ingrese su contraseña", @type = "hidden" })
-                                }
+                                </div>
                             }
-                            else
-                            {
+                        }
+                        else
+                        {
+                            <div class="col-md-3">
+                                <label>Password</label>
                                 @Html.TextBoxFor(u => u.Pass, new { @class = "form-control", @placeholder = "Ingrese su contraseña", @type = "password" })
                                 @Html.ValidationMessageFor(u => u.Pass)
-                            }
-                        </div>
+                            </div>
+                        }
                     </div>
                 </div>
                 if (ViewBag.EsAdmin && Model != null && Model.IdUsuario > 0)
                 {
-                    <div class="line line-dashed line-lg pull-in"></div>
                     <div class="form-group">
                         <div class="row">
                             <div class="col-md-12">
@@ -137,23 +143,17 @@ else { cadena = "Actualizar"; }
                     </div>
                 }
                 else
-                {
-                    @Html.TextBoxFor(u => u.Active, new { @value = Model != null ? Model.Active : false, @type = "hidden" })
-                }
+                {@Html.TextBoxFor(u => u.Active, new { @value = Model != null ? Model.Active : false, @type = "hidden" })}
                 <div class="line line-dashed b-b line-lg pull-in"></div>
                 @Html.TextBoxFor(u => u.IdEmpresa, new { @value = Model.IdEmpresa, @type = "hidden" })
                 @Html.TextBoxFor(u => u.IdUsuario, new { @value = Model.IdUsuario != 0 ? Model.IdUsuario.ToString() : "", @type = "hidden" })
                 var btnName = (Model != null && Model.IdUsuario > 0) ? "Guardar Cambios" : "Crear";
                 <button type="submit" class="btn btn-sm btn-success">@btnName</button>
                 if (ViewBag.EsAdmin)
-                {
-                    <a class="btn btn-default" href="@Url.Action("Usuarios", "Admin")">Cancelar</a>
-                }
+                {<a class="btn btn-default" href="@Url.Action("Usuarios", "Admin")">Cancelar</a>}
                 else
-                {
-                    <a class="btn btn-default" href="@Url.Action("Index", "Admin")">Cancelar</a>
-                    }
-                }
+                {<a class="btn btn-default" href="@Url.Action("Index", "Admin")">Cancelar</a>}
+            }
         </div>
     </div>
 </div>
